refactor: updated export pdf functionality to use html2pdf.js package

--- a/web/login/index.html
+++ b/web/login/index.html
@@ -16,7 +16,7 @@
                 <img
                     src="/favicon.svg"
                     alt=""
-                    class="w-12 h-12 inline-block mx-auto"
+                    class="size-20 inline-block mx-auto"
                 />
                 <h1 class="text-xl font-bold">Sign In</h1>
             </div>
